--- a/views/generalassignment.ejs
+++ b/views/generalassignment.ejs
@@ -18,6 +18,7 @@
     <link rel="shortcut icon" href="images/logo bar.jpeg" type="image/x-icon">
     <!-- Bootsrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./fontawesome-free-5.13.1-web/fontawesome-free-5.13.1-web/css/all.css">
     <script>
         addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
@@ -30,10 +31,9 @@
 
     </script>
     <!-- Custom Theme files -->
-    <link rel="stylesheet" href="./fontawesome-free-5.13.1-web/css/all.css">
     <!-- <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"> -->
-    <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
     <link rel="stylesheet" href="css/general.css">
+    <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
     <!-- font-awesome icons -->
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <!-- //Custom Theme files -->
@@ -44,14 +44,14 @@
     <link href="//fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 </head>
 <body>
+
     <!-- header -->
+    
     <%- include('./partials/navbar.ejs') %>
 
-<!-- submit now side panel -->
-    <!-- submit now button -->
     <span id="submit_now">
         
-        <a href="/" style="text-decoration: none;">  Submit now </a>
+        <a href="index.html" style="text-decoration: none;">  Submit now </a>
     
       </span>
 
@@ -123,27 +123,26 @@
 </div>
 
 <div class="other_help">
-    <h2>Others assignments help we offer</h2>
+    <h2>Other assignments help we offer</h2>
     <ul class="others_list">
-        <div>
-            
-        <li><i class="fas fa-check-circle"></i>Economics Assignment Help</li></div>
+        <li><i class="fas fa-check-circle"></i>Economics Assignment Help</li>
         <li><i class="fas fa-check-circle"></i>Law Assignment Help</li>
         <li><i class="fas fa-check-circle"></i>Sociology Assignment Help</li>
         <li><i class="fas fa-check-circle"></i>Humanities Assignment Help</li>
         <li><i class="fas fa-check-circle"></i>Biology Assignment Help</li>
-        <li><i class="fas fa-check-circle"></i>English, and so much more</li>
+        <li><i class="fas fa-check-circle"></i>English and many more</li>
     </ul>
 
 </div>
 
 <section class="testimonials">
     <div class="container">
-      <div class="heading row col">Our Customers Reviews?</div>
+        <h2 class="customers_review">Our Customers Reviews?</h2>
+      <div class="heading row col"> </div>
       <ul class="testimonials_slide slick-initialized slick-slider slick-dotted">
         <div class="slick-list draggable container-fluid">
           <div class="slick-track row col" style="opacity: 1; width: 1404px; transform: translate3d(0px, 0px, 0px);">
-            <div class="col-sm-12 col-md-4 col-lg-4 slick-slide slick-current slick-active" data-slick-/="0" aria-hidden="false" tab/="0" role="tabpanel" id="slick-slide00" aria-describedby="slick-slide-control00">
+            <div class="col-sm-12 col-md-4 col-lg-4 slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" tabindex="0" role="tabpanel" id="slick-slide00" aria-describedby="slick-slide-control00">
               <figure>
                   <img src="images/1" alt="">
               </figure>
@@ -156,7 +155,7 @@
                 <div class="topstr-rate"><i class="active"></i><i class="active"></i><i class="active"></i><i class="active"></i><i class="active"></i></div>
               </div>
             </div>
-            <div class="col-sm-12 col-md-4 col-lg-4 slick-slide slick-active" data-slick-/="1" aria-hidden="false" tab/="0" role="tabpanel" id="slick-slide01" aria-describedby="slick-slide-control01">
+            <div class="col-sm-12 col-md-4 col-lg-4 slick-slide slick-active" data-slick-index="1" aria-hidden="false" tabindex="0" role="tabpanel" id="slick-slide01" aria-describedby="slick-slide-control01">
               <figure>
                   <img src="#" alt="">
               </figure>
@@ -167,7 +166,7 @@
               </div>
             </div>
     
-            <div class="col-sm-12 col-md-4 col-lg-4 slick-slide" data-slick-/="3" aria-hidden="true" tab/="-1" role="tabpanel" id="slick-slide03" aria-describedby="slick-slide-control03">
+            <div class="col-sm-12 col-md-4 col-lg-4 slick-slide" data-slick-index="3" aria-hidden="true" tabindex="-1" role="tabpanel" id="slick-slide03" aria-describedby="slick-slide-control03">
               <figure> <img> </figure>
               <p>The expert is very attentive, patient and detailed. This was the first time I worked with
                 IdealAssignmentHelp. Amazing work! Very professional and fast delivery. I am thrilled with the high
@@ -183,8 +182,8 @@
           </div>
         </div>
         <ul class="slick-dots" style="display: block;" role="tablist">
-          <li class="slick-active" role="presentation"><button type="button" role="tab" id="slick-slide-control00" aria-controls="slick-slide00" aria-label="1 of 2" tab/="0" aria-selected="true">1</button></li>
-          <li role="presentation"><button type="button" role="tab" id="slick-slide-control01" aria-controls="slick-slide01" aria-label="2 of 2" tab/="-1">2</button></li>
+          <li class="slick-active" role="presentation"><button type="button" role="tab" id="slick-slide-control00" aria-controls="slick-slide00" aria-label="1 of 2" tabindex="0" aria-selected="true">1</button></li>
+          <li role="presentation"><button type="button" role="tab" id="slick-slide-control01" aria-controls="slick-slide01" aria-label="2 of 2" tabindex="-1">2</button></li>
         </ul>
       </ul>
     </div>
@@ -208,7 +207,7 @@
         <div class="row p-sm-4 px-3 py-3">
             <div class="col-lg-4 footer-top mt-md-0 mt-sm-5">
                 <h4>
-                    <a class="navbar-brand" href="/">
+                    <a class="navbar-brand" href="index.html">
                         Ideal Assignments Help
                     </a>
                 </h4>
@@ -234,27 +233,27 @@
                     <hr>
                     <ul class="list-w3pvtits">
                         <li>
-                            <a href="/">
+                            <a href="index.html">
                                 Home
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="about">
+                            <a href="about.html">
                                 About Us
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="portfolio">
+                            <a href="resources.html">
                                 Resources
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="single">
+                            <a href="single.html">
                                 Blog
                             </a>
                         </li>
                         <li>
-                            <a href="contact">
+                            <a href="contact.html">
                                 Contact Us
                             </a>
                         </li>
@@ -267,27 +266,27 @@
                     <hr>
                     <ul class="list-w3pvtits">
                         <li>
-                            <a href="about">
+                            <a href="about.html">
                                 Our Mission
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="single">
+                            <a href="single.html">
                                 Latest posts
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="portfolio">
+                            <a href="resources.html">
                                 Explore
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="contact">
+                            <a href="contact.html">
                                 Find us
                             </a>
                         </li>
                         <li>
-                            <a href="/">
+                            <a href="index.html">
                                 Privacy Policy
                             </a>
                         </li>
@@ -300,27 +299,27 @@
                     <hr>
                     <ul class="list-w3pvtits">
                         <li>
-                            <a href="single">
+                            <a href="single.html">
                                 more
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="portfolio">
+                            <a href="resources.html">
                                 our work
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="about">
+                            <a href="about.html">
                                 Explore
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="contact">
+                            <a href="contact.html">
                                 contact us
                             </a>
                         </li>
                         <li>
-                            <a href="/">
+                            <a href="index.html">
                                 references
                             </a>
                         </li>
@@ -333,17 +332,17 @@
                     <hr>
                     <ul class="list-w3pvtits">
                         <li class="my-2">
-                            <a href="portfolio">
+                            <a href="resources.html">
                                 Explore
                             </a>
                         </li>
                         <li>
-                            <a href="about">
+                            <a href="about.html">
                                 Our Mission
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="single">
+                            <a href="single.html">
                                 Latest posts
                             </a>
                         </li>
@@ -355,7 +354,7 @@
                                     <hr>
                                     <ul class="list-w3pvtits ft-link">
                                         <!-- <li class="my-2">
-                                            <a href="portfolio">
+                                            <a href="portfolio.html">
                                                 Explore
                                             </a>
                                         </li> -->
@@ -371,7 +370,7 @@
                                         </li>
             
                                         <!-- <li class="mb-2">
-                                            <a href="contact">
+                                            <a href="contact.html">
                                                 Find us
                                             </a>
                                         </li> -->
