--- a/views/stat.ejs
+++ b/views/stat.ejs
@@ -46,11 +46,12 @@
     <!-- header -->
     <%- include('./partials/navbar.ejs') %>
 
+
 <!-- submit now side panel -->
     <!-- submit now button -->
     <span id="submit_now">
         
-        <a href="/" style="text-decoration: none;">  Submit now </a>
+        <a href="index.html" style="text-decoration: none;">  Submit now </a>
     
       </span>
 
@@ -74,65 +75,84 @@
     </p>
 
 
-
-
-<h2>MAJOR BRANCH OF STATISTICS</h2>
+<div class="container-fluid">
+    <div class="row col">
+        <div class="col-sm-12 col-md-12 col-lg-6">
+<h2 style="text-transform: uppercase;">Descriptive Statistics </h2>
 <img src="images/des stat.png" alt="">
 <p>Descriptive statistics is a short descriptive coefficient that summarizes the data set, which can be either a team of the entire or a sample of the population. It is the measure of central tendencies and variable measures. 
     We provide statistics assignment help on all type of descriptive statistics including central leaning of ungrouped data, measures of mean, dispersion, variance & standard deviations of ungrouped and grouped data, bids of those measures, measures of position, box, and millimeter plot, etc.
     </p>
-
-    <h2>Inferential Statistics</h2>
+        </div>
+    <div class="col-sm-12 col-md-12 col-lg-6">
+    <h2>    INFERENTIAL STATISTICS</h2>
     <img src="images/inf stat.jpg" alt="">
 <p>Inferential statistics is a set of assumptions that are made on the basis of information found by Descriptive Statistics. This type of statistics is used to take a random sample of data taken from a population to describe and make deductions about that population.
     We provide statistics assignment help on all the type of inferential statistics including Hypothesis Tests about the Mean and Proportion, Estimation and Hypothesis Testing Two Populations, Estimation of Mean and Proportion, Analysis of Variance (ANOVA), Analysis of covariance (ANCOVA), Statistical significance (t-test, z-test), Correlation and Regression, Confidence interval, Chi-square and lot more.
     </p>
-
-
+</div>
+</div>
+</div>
+<!-- 
 <h2>STATISTICAL SOFTWARE </h2>
 
 <p>We provide help with almost all statistical softwares, however, below are the softwares that are in high demand.</p>
 
-<img src="images/stat soft.jpg" alt="">
+<img src="images/stat soft.jpg" alt=""> -->
 
 </div>
 
 <div class="last">
+    <div class="container-fluid">
+        <div class="row col">
+            <div class="col-lg-6 col-md-6 col-sm-12">
     <h4>MATLAB Assignment Help: </h4>   
-    <h5>MATLAB programming is quite useful in mathematics and physics assignments. It allows an interactive environment for programming, computation,
+    <p>MATLAB programming is quite useful in mathematics and physics assignments. It allows an interactive environment for programming, computation,
          and visualization. Our team of MATLAB experts is always ready to provide you with the best MATLAB homework within the given deadline. 
          They are 24*7 online to help you out and solve all your queries regarding MATLAB assignment.</h5>
-
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
     <h4>MINITAB Assignment Help:</h4>
-    <h5>Minitab is one of the best statistical software. It is used to help you to analyze the dataset. 
-        You can input the data in Minitab efficiently and effectively. It is easy to use and it also manipulates that data and then extrapolates answers to the current issues</h5>
-
+    <p>Minitab is one of the best statistical software. It is used to help you to analyze the dataset. 
+        You can input the data in Minitab efficiently and effectively. It is easy to use and it also manipulates that data and then extrapolates answers to the current issues</p>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-12">
 <h4>SPSS Assignment Help:</h4> 
-<h5>SPSS is an abbreviation of Statistical Package for the Social Sciences. It is used to analyze social science. It is one of the best software for the analysis and computation of statistical data. 
-    It is also used in mathematical sciences, health sciences, and marketing. Our experts complete your SPSS assignment on time.</h5>
-
+<p>SPSS is an abbreviation of Statistical Package for the Social Sciences. It is used to analyze social science. It is one of the best software for the analysis and computation of statistical data. 
+    It is also used in mathematical sciences, health sciences, and marketing. Our experts complete your SPSS assignment on time.</p>
+</div>
+<div class="col-lg-6 col-md-6 col-sm-12">
 <h4>JMP Assignment Help: 
-    <h5>JMP (pronounced “jump”) is one of the data software for statistics operations. Our experts always give you unique JMP assignment content.</h5>
-
+    <p>JMP (pronounced “jump”) is one of the data software for statistics operations. Our experts always give you unique JMP assignment content.</p>
+</div>
+<div class="col-lg-6 col-md-6 col-sm-12">
 <h4>SAS Assignment Help:</h4>
-<h5>SAS stands for Statistical Analysis System. It is one of the crucial statistical software tools. You can save any database format data from any source.</h5>
-
-
+<p>SAS stands for Statistical Analysis System. It is one of the crucial statistical software tools. You can save any database format data from any source.</p>
+</div>
+<div class="col-lg-6 col-md-6 col-sm-12">
 <h4>R Programming Assignment Help:</h4> 
-<h5>R is one open-source programming language. Statisticians widely use it. We are covering every R programming language concept and provide you with the best solution at your limited budget.</h5>
-
+<p>R is one open-source programming language. Statisticians widely use it. We are covering every R programming language concept and provide you with the best solution at your limited budget.</p>
+</div>
+<div class="col-lg-6 col-md-6 col-sm-12">
 <h4>Python Programming Assignment Help</h4> 
-<h5>Python programming is one of the widely used programming languages for data science. Our experts will help you to clear all your doubts related to Python statistical packages i.e., Numpy, Panda, and so on. Don't worry about the complexity of your homework. We are ready to offer you the best python programming assignment help. </h5>
-
+<p>Python programming is one of the widely used programming languages for data science. Our experts will help you to clear all your doubts related to Python statistical packages i.e., Numpy, Panda, and so on. Don't worry about the complexity of your homework. We are ready to offer you the best python programming assignment help. </p>
+</div>
+<div class="col-lg-6 col-md-6 col-sm-12">
 <h4>Excel Assignment Help:</h4> 
-<h5>Excel is one of the most popular statistics software to fulfill day to day tasks. But there is another form of excel that is known as advanced excel. Most of the students face a lot of difficulty with advanced excel. But don’t worry we are making it easier for you with the best excel assignment help services.</h5>
-
+<p>Excel is one of the most popular statistics software to fulfill day to day tasks. But there is another form of excel that is known as advanced excel. Most of the students face a lot of difficulty with advanced excel. But don’t worry we are making it easier for you with the best excel assignment help services.</p>
+</div>
+<div class="col-lg-6 col-md-6 col-sm-12">
 <h4>Tableau Assignment help:</h4> 
-<h5>We also cover tableau assignments in our services. Tableau is one of the best and widely used data visualization software. The data analytics students need to have the proper command over Tableau for a better career. We cover almost every topic related to Tableau to clear all your doubts. It will help you to score high grades.</h5>
+<p>We also cover tableau assignments in our services. Tableau is one of the best and widely used data visualization software. The data analytics students need to have the proper command over Tableau for a better career. We cover almost every topic related to Tableau to clear all your doubts. It will help you to score high grades.</h5>
 
+</div>
+<div class="col-lg-6 col-md-6 col-sm-12">
 <h4>STATA Assignment Help:</h4> 
-<h5>STATA is widely used statistical software in research, economics, political science, Biomedical, and many more. It means the humanities, business, and medical students have to do their STATA assignment. Our expert panel is most experienced with STATA. Therefore they can help you with high-quality assignment help.
+<p>STATA is widely used statistical software in research, economics, political science, Biomedical, and many more. It means the humanities, business, and medical students have to do their STATA assignment. Our expert panel is most experienced with STATA. Therefore they can help you with high-quality assignment help.
 From descriptive statistics to inferential statistics, we can provide you with statistics help par excellence in whatever type of academic task you desire. Order now and let get started! </h5>
+</div>
+</div>
+</div>
 </div>
 
 
@@ -151,7 +171,7 @@ From descriptive statistics to inferential statistics, we can provide you with s
         <div class="row p-sm-4 px-3 py-3">
             <div class="col-lg-4 footer-top mt-md-0 mt-sm-5">
                 <h4>
-                    <a class="navbar-brand" href="/">
+                    <a class="navbar-brand" href="index.html">
                         Ideal Assignments Help
                     </a>
                 </h4>
@@ -177,27 +197,27 @@ From descriptive statistics to inferential statistics, we can provide you with s
                     <hr>
                     <ul class="list-w3pvtits">
                         <li>
-                            <a href="/">
+                            <a href="index.html">
                                 Home
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="about">
+                            <a href="about.html">
                                 About Us
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="portfolio">
+                            <a href="resources.html">
                                 Resources
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="single">
+                            <a href="single.html">
                                 Blog
                             </a>
                         </li>
                         <li>
-                            <a href="contact">
+                            <a href="contact.html">
                                 Contact Us
                             </a>
                         </li>
@@ -210,27 +230,27 @@ From descriptive statistics to inferential statistics, we can provide you with s
                     <hr>
                     <ul class="list-w3pvtits">
                         <li>
-                            <a href="about">
+                            <a href="about.html">
                                 Our Mission
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="single">
+                            <a href="single.html">
                                 Latest posts
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="portfolio">
+                            <a href="resources.html">
                                 Explore
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="contact">
+                            <a href="contact.html">
                                 Find us
                             </a>
                         </li>
                         <li>
-                            <a href="/">
+                            <a href="index.html">
                                 Privacy Policy
                             </a>
                         </li>
@@ -243,27 +263,27 @@ From descriptive statistics to inferential statistics, we can provide you with s
                     <hr>
                     <ul class="list-w3pvtits">
                         <li>
-                            <a href="single">
+                            <a href="single.html">
                                 more
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="portfolio">
+                            <a href="resources.html">
                                 our work
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="about">
+                            <a href="about.html">
                                 Explore
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="contact">
+                            <a href="contact.html">
                                 contact us
                             </a>
                         </li>
                         <li>
-                            <a href="/">
+                            <a href="index.html">
                                 references
                             </a>
                         </li>
@@ -276,17 +296,17 @@ From descriptive statistics to inferential statistics, we can provide you with s
                     <hr>
                     <ul class="list-w3pvtits">
                         <li class="my-2">
-                            <a href="portfolio">
+                            <a href="resources.html">
                                 Explore
                             </a>
                         </li>
                         <li>
-                            <a href="about">
+                            <a href="about.html">
                                 Our Mission
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="single">
+                            <a href="single.html">
                                 Latest posts
                             </a>
                         </li>
@@ -298,7 +318,7 @@ From descriptive statistics to inferential statistics, we can provide you with s
                                     <hr>
                                     <ul class="list-w3pvtits ft-link">
                                         <!-- <li class="my-2">
-                                            <a href="portfolio">
+                                            <a href="resources.html">
                                                 Explore
                                             </a>
                                         </li> -->
@@ -314,7 +334,7 @@ From descriptive statistics to inferential statistics, we can provide you with s
                                         </li>
             
                                         <!-- <li class="mb-2">
-                                            <a href="contact">
+                                            <a href="contact.html">
                                                 Find us
                                             </a>
                                         </li> -->
