--- a/views/business.ejs
+++ b/views/business.ejs
@@ -43,38 +43,36 @@
     <link href="//fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 </head>
 <body>
+    <!-- header -->
+    
     <%- include('./partials/navbar.ejs') %>
+
+
 
 <!-- submit now side panel -->
     <!-- submit now button -->
     <span id="submit_now">
         
-        <a href="/" style="text-decoration: none;">  Submit now </a>
+        <a href="index.html" style="text-decoration: none;">  Submit now </a>
     
       </span>
 
       <!-- submit now ends -->
 <div class="object5">
 
-    <h2>  <span;"> Business Plan  </span>   </h2>
-
-    <h4 class="business_need">Need to Deal with Business plan? Get the Right Help Here</h4>
+    <h2>  <span> Business Plan  </span>   </h2>
 
 <p>The journey of starting a company, doing business, and making profit starts from business planning, market research, competitors analysis, and financial projection –of course, all this activities are engulfed in business plan writing. So, would you trust an inexperience company with these tasks?
     Are you a startup, already progressing company, large organization, or non-profit organization located in the USA, Canada, UK, or anywhere in Europe? In that case, you can take advantage of this opportunity to gain a competitive advantage in your industry.
     We have led a team of business plan writers for SBA Consulting and we have successfully written/reviewed over 2000 business plans for startup and already progressing businesses, companies, non-profit, & large organizations in the USA, UK, CANADA, and Europe. With our experience and expertise– we will be your best partner in creating a fund winning business plan for your company.  
-    Our capability as a professional business plan company that spans across the development of effective marketing plan, execution strategy and market-winning plan.
-    </p>
-
-    <div class="inner_service">
-
-        <h3>We work with companies to create and refine their plans and models to develop a coherent launch or restructuring plan that helps companies grow.</h3>
-<p>We are passionate and excited to work with you in writing effective business plans for Sport, CBD/Marijuana, Healthcare, Media and Entertainment, Janitorial, Logistics, Event center, trucking transportation, beauty & personal care, Saloon, Pharmaceutical, Eye Extension, Education, Tourism, Mobile App, Pet, E-commerce, Restaurant, Construction, Fashion, Agriculture, Real estate, non-profits home care and a lot more.</p>
-        <h3 class="text-head"> Our Complete Business Plan Includes but not limited to: </h3>
+    Our capability as a professional business plan company that spans across the development of effective marketing plan, execution strategy and market-winning plan. </br>
+    We work with companies to create and refine their plans and models to develop a coherent launch or restructuring plan that helps companies grow.
+We are passionate and excited to work with you in writing effective business plans for Sport, CBD/Marijuana, Healthcare, Media and Entertainment, Janitorial, Logistics, Event center, trucking transportation, beauty & personal care, Saloon, Pharmaceutical, Eye Extension, Education, Tourism, Mobile App, Pet, E-commerce, Restaurant, Construction, Fashion, Agriculture, Real estate, non-profits home care and a lot more.</p>
+        <h3 class="text-head"> <span style="color: rgb(238, 133, 15);")> Our Complete Business Plan Includes but not limited to: </span>   </h3>
     </div>
 </div>
 
-<section class="w3l-/-block4">
+<section class="w3l-index-block4">
     <div class="feature-16-main py-5">
         <div class="container py-lg-3">
             <div class="features-grids container-fluid">
@@ -208,7 +206,7 @@
         <div class="row p-sm-4 px-3 py-3">
             <div class="col-lg-4 footer-top mt-md-0 mt-sm-5">
                 <h4>
-                    <a class="navbar-brand" href="/">
+                    <a class="navbar-brand" href="index.html">
                         Ideal Assignments Help
                     </a>
                 </h4>
@@ -234,27 +232,27 @@
                     <hr>
                     <ul class="list-w3pvtits">
                         <li>
-                            <a href="/">
+                            <a href="index.html">
                                 Home
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="about">
+                            <a href="about.html">
                                 About Us
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="portfolio">
+                            <a href="resources.html">
                                 Resources
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="single">
+                            <a href="single.html">
                                 Blog
                             </a>
                         </li>
                         <li>
-                            <a href="contact">
+                            <a href="contact.html">
                                 Contact Us
                             </a>
                         </li>
@@ -267,27 +265,27 @@
                     <hr>
                     <ul class="list-w3pvtits">
                         <li>
-                            <a href="about">
+                            <a href="about.html">
                                 Our Mission
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="single">
+                            <a href="single.html">
                                 Latest posts
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="portfolio">
+                            <a href="resources.html">
                                 Explore
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="contact">
+                            <a href="contact.html">
                                 Find us
                             </a>
                         </li>
                         <li>
-                            <a href="/">
+                            <a href="index.html">
                                 Privacy Policy
                             </a>
                         </li>
@@ -300,27 +298,27 @@
                     <hr>
                     <ul class="list-w3pvtits">
                         <li>
-                            <a href="single">
+                            <a href="single.html">
                                 more
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="portfolio">
+                            <a href="resources.html">
                                 our work
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="about">
+                            <a href="about.html">
                                 Explore
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="contact">
+                            <a href="contact.html">
                                 contact us
                             </a>
                         </li>
                         <li>
-                            <a href="/">
+                            <a href="index.html">
                                 references
                             </a>
                         </li>
@@ -333,17 +331,17 @@
                     <hr>
                     <ul class="list-w3pvtits">
                         <li class="my-2">
-                            <a href="portfolio">
+                            <a href="resources.html">
                                 Explore
                             </a>
                         </li>
                         <li>
-                            <a href="about">
+                            <a href="about.html">
                                 Our Mission
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="single">
+                            <a href="single.html">
                                 Latest posts
                             </a>
                         </li>
@@ -355,7 +353,7 @@
                                     <hr>
                                     <ul class="list-w3pvtits ft-link">
                                         <!-- <li class="my-2">
-                                            <a href="portfolio">
+                                            <a href="resources.html">
                                                 Explore
                                             </a>
                                         </li> -->
@@ -371,7 +369,7 @@
                                         </li>
             
                                         <!-- <li class="mb-2">
-                                            <a href="contact">
+                                            <a href="contact.html">
                                                 Find us
                                             </a>
                                         </li> -->
